# libpolycomp

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  _r_e_a_d_m_e_8md_source.html  annotated.html  annotated.js  classes.html  diff__rle_8c_source.html  diff_rle.c  doxygen.css  files.html  files.js  formula.repository  globals.html  globals_enum.html  globals_eval.html  globals_func.html  graph_legend.html  group___r_l_e.html  group___r_l_e.js  group__cheby.html  group__cheby.js  group__diff_r_l_e.html  group__diff_r_l_e.js  group__poly.html  group__poly.js  group__poly__highlevel.html  group__poly__lowlevel.html  group__poly__lowlevel.js  group__polyfit.html  group__polyfit.js  group__quant.html  group__quant.js  index.html  libpolycomp.h  libpolycomp_8h.html  libpolycomp_8h.js  (+56 more)
search/: all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_0.js  groups_2.js  groups_3.js  groups_5.js  pages_0.js  search.css  searchdata.js
